# kaish-extras

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
crates/kaish-web/: Cargo.toml
crates/kaish-web/src/: lib.rs
scripts/: build-site.sh  e2e.ts  make-social-card.sh  make_seed.py  social-card.html
site/: coi-sw.js  index.html  smoke.html  worker.js
