[workspace]
resolver = "2"
members = ["crates/kaish-web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Amy Tobey <tobert@gmail.com>"]
repository = "https://github.com/tobert/kaish-extras"

# kaish is pinned by git sha while kaish-extras finds its feet; switch every
# kaish-* dependency to the published crates.io release before any release of
# the crates in this workspace.
[workspace.dependencies]
# Both kaish crates must pin the SAME rev — mixing revs would put two copies
# of kaish-kernel in the graph. Currently kaish v0.13.0 (#237).
kaish-kernel = { git = "https://github.com/tobert/kaish.git", rev = "0e0a23533bc41c2a82ff8377fb7e2c6e79917cd3", default-features = false }
kaish-client = { git = "https://github.com/tobert/kaish.git", rev = "0e0a23533bc41c2a82ff8377fb7e2c6e79917cd3" }

[profile.release]
# The wasm bundle ships over the network — favor size.
opt-level = "z"
lto = true
codegen-units = 1
strip = true

